--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "Javascript plugin to animate frames from sprite image",
   "author": "Dmitry Kovalev",
   "license": "MIT",
-  "main": "animate-sprite.js",
+  "main": "build/animate-sprite.min.js",
+  "module": "src/animate-sprite.js",
   "scripts": {
     "build": "webpack --config config/webpack.prod.js && node config/copy-to-examples.js",
     "start": "webpack-dev-server --progress --config config/webpack.dev.js --open",
     "test": "echo \"Error: no test specified\""
   },
+  "files": [
+    "src",
+    "build/animate-sprite.min.js"
+  ],
   "keywords": [
     "sprite",
     "animation",
@@ -27,6 +32,7 @@
     "type": "git",
     "url": "https://github.com/its2easy/animate-sprite"
   },
+  "sideEffects": false,
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
