--- a/package.json
+++ b/package.json
@@ -5,18 +5,24 @@
   "author": "Dmitry Kovalev",
   "license": "MIT",
   "main": "build/animate-sprite.min.js",
-  "module": "src/animate-sprite.js",
+  "module": "build/animate-sprite.esm.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
-    "build": "webpack --config config/webpack.prod.js && node config/copy-to-examples.js",
+    "build": "webpack --config config/webpack.prod.js && rollup --config config/rollup.config.js && node config/copy-to-examples.js",
     "start": "webpack-dev-server --progress --config config/webpack.dev.js --open",
     "test": "echo \"Error: no test specified\"",
     "version": "npm run build && git add -A build",
-    "postversion": "git push && git push --tags",
-    "publish": "npm publish --access public"
+    "postversion": "git push && git push --tags"
   },
   "files": [
     "src",
-    "build/animate-sprite.min.js"
+    "build/animate-sprite.min.js",
+    "build/animate-sprite.esm.js",
+    "build/animate-sprite.esm.js.map",
+    "build/animate-sprite.esm.min.js",
+    "build/animate-sprite.esm.min.js.map"
   ],
   "keywords": [
     "sprite",
@@ -40,6 +46,8 @@
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "babel-loader": "^8.1.0",
+    "rollup": "^2.18.0",
+    "rollup-plugin-terser": "^6.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
