--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Dmitry Kovalev",
   "license": "MIT",
   "main": "build/animate-sprite.min.js",
-  "module": "build/animate-sprite.esm.js",
+  "module": "build/animate-sprite.esm.min.js",
   "publishConfig": {
     "access": "public"
   },
@@ -13,16 +13,11 @@
     "build": "webpack --config config/webpack.prod.js && rollup --config config/rollup.config.js && node config/copy-to-examples.js",
     "start": "webpack-dev-server --progress --config config/webpack.dev.js --open",
     "test": "echo \"Error: no test specified\"",
-    "version": "npm run build && git add -A build",
+    "version": "npm run build && git add .",
     "postversion": "git push && git push --tags"
   },
   "files": [
-    "src",
-    "build/animate-sprite.min.js",
-    "build/animate-sprite.esm.js",
-    "build/animate-sprite.esm.js.map",
-    "build/animate-sprite.esm.min.js",
-    "build/animate-sprite.esm.min.js.map"
+    "build"
   ],
   "keywords": [
     "sprite",
@@ -35,7 +30,10 @@
     "360",
     "viewer",
     "view360",
-    "frames"
+    "frames",
+    "frames animation",
+    "360 animation",
+    "sprite animation"
   ],
   "repository": {
     "type": "git",
@@ -43,17 +41,19 @@
   },
   "sideEffects": false,
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "babel-loader": "^8.1.0",
-    "rollup": "^2.18.0",
-    "rollup-plugin-terser": "^6.1.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2"
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@rollup/plugin-babel": "^5.3.0",
+    "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "rollup": "^2.59.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "webpack": "^5.61.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.4.0",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "core-js": "^3.6.5"
+    "core-js": "^3.19.1"
   }
 }
