--- a/package.json
+++ b/package.json
@@ -44,9 +44,12 @@
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
     "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.2",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "rollup": "^2.62.0",
+    "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-terser": "^7.0.2",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
