--- a/package.json
+++ b/package.json
@@ -43,24 +43,23 @@
   },
   "sideEffects": false,
   "devDependencies": {
-    "@babel/core": "^7.16.7",
-    "@babel/preset-env": "^7.16.7",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^21.0.1",
+    "@babel/core": "^7.17.8",
+    "@babel/preset-env": "^7.16.11",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^21.0.3",
     "@rollup/plugin-node-resolve": "^13.1.3",
-    "babel-loader": "^8.2.3",
+    "babel-loader": "^8.2.4",
     "clean-webpack-plugin": "^4.0.0",
-    "rollup": "^2.63.0",
+    "core-js": "^3.21.1",
+    "rollup": "^2.70.1",
     "rollup-plugin-bundle-size": "^1.0.3",
-    "rollup-plugin-dts": "^4.1.0",
+    "rollup-plugin-dts": "^4.2.0",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.5.4",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.2",
+    "typescript": "^4.6.3",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4",
     "webpack-merge": "^5.8.0"
   },
-  "dependencies": {
-    "core-js": "^3.20.2"
-  }
+  "dependencies": {}
 }
